--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -20,12 +20,62 @@
         display: block;
       }
     }
+
+    
   {%- endstyle -%}
 {%- endif -%}
+
 
 {%- style -%}
   #Banner-{{ section.id }}::after {
     opacity: {{ section.settings.image_overlay_opacity | divided_by: 100.0 }};
+  }
+
+  /* 新增 mobile banner style */
+  .mobile-only-media {
+    display: none;
+  }
+
+  @media (max-width: 750px) {
+    /* 隐藏默认的banner图片 */
+    .banner__media {
+      display: none; 
+    }
+
+    /* 显示移动端的banner图片 */
+    .mobile-only-media {
+      display: block;
+    }
+
+    #Banner-{{ section.id }} .banner__content {
+        position: absolute;
+        top: 10%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        text-align: center; 
+        z-index: 10;
+    }
+
+    /* 移除背景阴影层（即移除 background-color 和可能的 padding） */
+    #Banner-{{ section.id }} .banner__content .banner__box {
+        background-color: transparent; /* 设置为透明 */
+        color: #fff; 
+        padding: 0; 
+        height: auto; 
+    }
+ 
+    /* 确保文字按钮在 box 内居中 */
+    #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
+        font-size: 22px;
+        margin: 0; 
+        padding: 10px 0; 
+    }
+ 
+    /* 如果还有按钮，确保按钮也居中 */
+    #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
+        display: block;
+        margin: 10px auto; 
+    }
   }
 {%- endstyle -%}
 
@@ -53,8 +103,15 @@
 
 <div
   id="Banner-{{ section.id }}"
-  class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
+  class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}" style="position: relative;"
 >
+
+  {% comment %} 新增 mobile banner {% endcomment %}
+  <div class="mobile-only-media" style="width: 100%;height=100%">
+    <img src="https://cdn.shopify.com/s/files/1/0654/8062/2234/files/home_banner_mobile.jpg?v=1735041803" alt="Mobile Banner Image" width="100%" height="100%">
+  </div>
+
+  {% comment %} 检查主图 section.settings.image 是否不为空 {% endcomment %}
   {%- if section.settings.image != blank -%}
     <div class="banner__media media{% if section.settings.image == blank and section.settings.image_2 == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} banner__media-half{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}">
       {%- liquid
@@ -82,11 +139,15 @@
           fetchpriority: fetch_priority
       }}
     </div>
+
+  {% comment %} 进一步判断第二张图片 section.settings.image_2 是否也为空，执行显示占位元素 {% endcomment %}
   {%- elsif section.settings.image_2 == blank -%}
     <div class="banner__media media{% if section.settings.image == blank and section.settings.image_2 == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} banner__media-half{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}">
       {{ 'hero-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}
     </div>
   {%- endif -%}
+
+  {% comment %} 检查第二张图片 section.settings.image_2 是否不为空 {% endcomment %}
   {%- if section.settings.image_2 != blank -%}
     <div class="banner__media media{% if section.settings.image != blank %} banner__media-half{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}">
       {%- liquid
@@ -115,6 +176,8 @@
       }}
     </div>
   {%- endif -%}
+
+  {% comment %} 文字内容 {% endcomment %}
   <div class="banner__content banner__content--{{ section.settings.desktop_content_position }} page-width{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
     <div class="banner__box content-container content-container--full-width-mobile color-{{ section.settings.color_scheme }} gradient">
       {%- for block in section.blocks -%}
