--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -30,53 +30,6 @@
   #Banner-{{ section.id }}::after {
     opacity: {{ section.settings.image_overlay_opacity | divided_by: 100.0 }};
   }
-
-  /* 新增 mobile banner style */
-  .mobile-only-media {
-    display: none;
-  }
-
-  @media (max-width: 750px) {
-    /* 隐藏默认的banner图片 */
-    .banner__media {
-      display: none; 
-    }
-
-    /* 显示移动端的banner图片 */
-    .mobile-only-media {
-      display: block;
-    }
-
-    #Banner-{{ section.id }} .banner__content {
-        position: absolute;
-        top: 10%;
-        transform: translate(-50%, -50%);
-        width: 100%;
-        text-align: center; 
-        z-index: 10;
-    }
-
-    /* 移除背景阴影层（即移除 background-color 和可能的 padding） */
-    #Banner-{{ section.id }} .banner__content .banner__box {
-        background-color: transparent; /* 设置为透明 */
-        color: #fff; 
-        padding: 0; 
-        height: auto; 
-    }
- 
-    /* 确保文字按钮在 box 内居中 */
-    #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
-        font-size: 22px;
-        margin: 0; 
-        padding: 10px 0; 
-    }
- 
-    /* 如果还有按钮，确保按钮也居中 */
-    #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
-        display: block;
-        margin: 10px auto; 
-    }
-  }
 {%- endstyle -%}
 
 {%- liquid
@@ -106,10 +59,59 @@
   class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}" style="position: relative;"
 >
 
-  {% comment %} 新增 mobile banner {% endcomment %}
-  <div class="mobile-only-media" style="width: 100%;height=100%">
-    <img src="https://cdn.shopify.com/s/files/1/0654/8062/2234/files/home_banner_mobile.jpg?v=1735041803" alt="Mobile Banner Image" width="100%" height="100%">
-  </div>
+  {% comment %} 如果是首页 新增 mobile banner {% endcomment %}
+  {% if template == 'index' %}
+    <div class="mobile-only-media" style="width: 100%;height: auto;">
+      <img src="https://cdn.shopify.com/s/files/1/0654/8062/2234/files/home_banner_mobile.jpg?v=1735041803" alt="Mobile Homepage Banner Image" width="100%" height="100%">
+    </div>
+    {%- style -%}
+      .mobile-only-media {
+        display: none;
+      }
+
+      @media (max-width: 750px) {
+        /* 隐藏默认的banner图片 */
+        .banner__media {
+          display: none; 
+        }
+    
+        /* 显示移动端的banner图片 */
+        .mobile-only-media {
+          display: block;
+        }
+    
+        #Banner-{{ section.id }} .banner__content {
+            position: absolute;
+            top: 10%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            text-align: center; 
+            z-index: 10;
+        }
+    
+        /* 移除背景阴影层（即移除 background-color 和可能的 padding） */
+        #Banner-{{ section.id }} .banner__content .banner__box {
+            background-color: transparent; /* 设置为透明 */
+            color: #fff; 
+            padding: 0; 
+            height: auto; 
+        }
+     
+        /* 确保文字按钮在 box 内居中 */
+        #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
+            font-size: 22px;
+            margin: 0; 
+            padding: 10px 0; 
+        }
+     
+        /* 如果还有按钮，确保按钮也居中 */
+        #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
+            display: block;
+            margin: 10px auto; 
+        }
+      }
+    {%- endstyle -%}
+  {% endif %}
 
   {% comment %} 检查主图 section.settings.image 是否不为空 {% endcomment %}
   {%- if section.settings.image != blank -%}
