--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -77,6 +77,7 @@
               >
                 {%- if block.settings.heading != blank -%}
                   <h2 class="footer-block__heading inline-richtext">{{- block.settings.heading -}}</h2>
+                  <p>jfdjdkshfjkdshfjdshfjdsfhjdkshfjkdshfjkdshfjkdshfjdshfjdshfjkdshjfkdhsjkfhjkdsfhjkdshfjk</p>
                 {%- endif -%}
 
                 {%- case block.type -%}
