--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -57,7 +57,7 @@
   class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}" style="position: relative;"
 >
 
-  {% comment %} 如果是首页 新增 mobile banner {% endcomment %}
+  {% comment %} Home add mobile banner {% endcomment %}
   {% if template == 'index' %}
     <div class="mobile-only-media" style="width: 100%;height: auto;">
       <img src="https://cdn.shopify.com/s/files/1/0654/8062/2234/files/home_banner_mobile.jpg?v=1735041803" alt="Mobile Homepage Banner Image" width="100%" height="100%">
@@ -106,6 +106,137 @@
         #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
             display: block;
             margin: 10px auto; 
+        }
+      }
+    {%- endstyle -%}
+  {% endif %}
+
+  {% comment %} Home and About us add mobile banner {% endcomment %}
+  {% if template == 'index' or template == 'page.about-us' %}
+    <div class="mobile-only-media" style="width: 100%;height: auto;">
+      {% if template == 'index' %}
+        <img src="https://cdn.shopify.com/s/files/1/0617/1413/7167/files/home_banner_mobile.jpg?v=1736319206" alt="Mobile Homepage Banner Image" width="100%" height="100%">
+        {%- style -%}
+          .mobile-only-media {
+            display: none;
+          }
+          @media (max-width: 750px) {
+            .banner__media {
+              display: none; 
+            }
+            .mobile-only-media {
+              display: block;
+            }
+            #Banner-{{ section.id }} .banner__content {
+                position: absolute;
+                top: 10%;
+                transform: translate(-50%, -50%);
+                width: 100%;
+                text-align: center; 
+                z-index: 10;
+            }
+            #Banner-{{ section.id }} .banner__content .banner__box {
+                background-color: transparent;
+                color: #fff; 
+                padding: 0; 
+                height: auto; 
+            }
+            #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
+                font-size: 22px;
+                margin: 0; 
+                padding: 10px 0; 
+            }
+            #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
+                display: block;
+                margin: 10px auto; 
+            }
+          }
+        {%- endstyle -%}
+      {% elsif template == 'page.about-us' %}
+        <img src="https://cdn.shopify.com/s/files/1/0617/1413/7167/files/aboue_us_banner_mobile.jpg?v=1736333046" alt="Mobile About Us Banner Image" width="100%" height="100%">
+        {%- style -%}
+          .mobile-only-media {
+            display: none;
+          }
+          @media (max-width: 750px) {
+            .banner__media {
+              display: none; 
+            }
+            .mobile-only-media {
+              display: block;
+            }
+            #Banner-{{ section.id }} .banner__content {
+                position: absolute;
+                top: 40%;
+                transform: translate(-50%, -50%);
+                width: 100%;
+                text-align: center; 
+                z-index: 10;
+            }
+            #Banner-{{ section.id }} .banner__content .banner__box {
+                background-color: transparent;
+                color: #fff; 
+                padding: 0; 
+                height: auto; 
+            }
+            #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
+                font-size: 22px;
+                margin: 0; 
+                padding: 10px 0; 
+            }
+            #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
+                display: block;
+                margin: 10px auto; 
+            }
+          }
+        {%- endstyle -%}
+      {% endif %}
+    </div>
+  {% endif %}
+
+  {% comment %} Home and About us add mobile banner css优化 {% endcomment %}
+  {% if template == 'index' or template == 'page.about-us' %}
+    <div class="mobile-only-media" style="width: 100%; height: auto;">
+      {% if template == 'index' %}
+        <img src="https://cdn.shopify.com/s/files/1/0617/1413/7167/files/home_banner_mobile.jpg?v=1736319206" alt="Mobile Homepage Banner Image" width="100%" height="100%">
+      {% elsif template == 'page.about-us' %}
+        <img src="https://cdn.shopify.com/s/files/1/0617/1413/7167/files/aboue_us_banner_mobile.jpg?v=1736333046" alt="Mobile About Us Banner Image" width="100%" height="100%">
+      {% endif %}
+    </div>
+  
+    {%- style -%}
+      .mobile-only-media {
+        display: none;
+      }
+      @media (max-width: 750px) {
+        .banner__media {
+          display: none; 
+        }
+        .mobile-only-media {
+          display: block;
+        }
+        #Banner-{{ section.id }} .banner__content {
+          position: absolute;
+          top: {% if template == 'index' %}10%{% else %}40%{% endif %};
+          transform: translate(-50%, -50%);
+          width: 100%;
+          text-align: center; 
+          z-index: 10;
+        }
+        #Banner-{{ section.id }} .banner__content .banner__box {
+          background-color: transparent;
+          color: #fff; 
+          padding: 0; 
+          height: auto; 
+        }
+        #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
+          font-size: 22px;
+          margin: 0; 
+          padding: 10px 0; 
+        }
+        #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
+          display: block;
+          margin: 10px auto; 
         }
       }
     {%- endstyle -%}
