--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -54,12 +54,12 @@
 
 <div
   id="Banner-{{ section.id }}"
-  class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}" style="position: relative;"
+  class="banner banner--content-align-{{ section.settings.desktop_content_alignment }} banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} banner--adapt{% endif %}{% if section.settings.show_text_below %} banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
 >
 
-  {% comment %} Home and About us add mobile banner css优化 {% endcomment %}
+  {% comment %} Home and About us add mobile banner {% endcomment %}
   {% if template == 'index' or template == 'page.about-us' %}
-    <div class="mobile-only-media" style="width: 100%; height: auto;">
+    <div class="mobile-only-media">
       {% if template == 'index' %}
         <img src="https://cdn.shopify.com/s/files/1/0617/1413/7167/files/home_banner_mobile.jpg?v=1736319206" alt="Mobile Homepage Banner Image" width="100%" height="100%">
       {% elsif template == 'page.about-us' %}
@@ -77,29 +77,21 @@
         }
         .mobile-only-media {
           display: block;
+          width: 100%;
+          height: auto;
         }
         #Banner-{{ section.id }} .banner__content {
           position: absolute;
-          top: {% if template == 'index' %}30%{% else %}30%{% endif %};
-          transform: translate(-50%, -50%);
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
           width: 100%;
           text-align: center; 
           z-index: 10;
         }
-        #Banner-{{ section.id }} .banner__content .banner__box {
-          background-color: transparent;
-          color: #fff; 
-          padding: 0; 
-          height: auto; 
-        }
-        #Banner-{{ section.id }} .banner__content .banner__box .banner__heading {
-          font-size: 22px;
-          margin: 0; 
-          padding: 10px 0; 
-        }
-        #Banner-{{ section.id }} .banner__content .banner__box .banner__button {
-          display: block;
-          margin: 10px auto; 
+        .banner--medium:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
+          min-height: 20rem;
         }
       }
     {%- endstyle -%}
