--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -90,6 +90,9 @@
           text-align: center; 
           z-index: 10;
         }
+        .banner--medium:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
+          min-height: 20rem;
+        }
       }
     {%- endstyle -%}
   {% endif %}
